--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,15 @@
 {
-  "version": 2,
+  "version": 1,
   "builds": [
-    {
-      "src": "index.js",
-      "use": "@now/node"
-    }
+      {
+          "src": "./index.js",
+          "use": "@vercel/node"
+      }
   ],
   "routes": [
-    {
-      // Specify which paths will route to a destination using a regex
-      "src": "/(.*)",
-      // Specify the paths' destination
-      "dest": "index.js"
-    }
+      {
+          "src": "/(.*)",
+          "dest": "/"
+      }
   ]
 }
-
-
