--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Website personal with apis rest.",
   "main": "index.js",
-  "type": "module",
+  "type":"module",
   "scripts": {
     "start": "node index.js"
   },
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/danzok/geekApis#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "yt-search": "^2.7.3"
   }
 }
