--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Website personal with apis rest.",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
@@ -22,7 +22,13 @@
   },
   "homepage": "https://github.com/danzok/geekApis#readme",
   "dependencies": {
+    "axios": "^1.1.3",
     "express": "^4.18.2",
-    "yt-search": "^2.7.3"
+    "yt-search": "^2.7.3",
+    "ytdl-core": "^4.11.2"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20"
   }
 }
